[package]
name = "scad"
version = "1.0.2"
authors = ["TheZoq2 <frans.skarman@gmail.com>"]

description = "A crate for generating OpenSCAD models using rust"
repository = "https://github.com/thezoq2/Rust-Scad"
documentation = "http://thezoq2.github.io/Rust-Scad/doc/scad_generator/index.html"
license = "LGPL-2.0-or-later"
readme = "Readme.md"

[dependencies]
nalgebra= "0.16.8"
